--- a/src/main/resources/static/app/views/servers.html
+++ b/src/main/resources/static/app/views/servers.html
@@ -35,6 +35,7 @@
                     <md-card-actions layout="row" layout-align="end center">
                         <md-button ng-click="startServer(server)">Start</md-button>
                         <md-button ng-click="reconfigureServer(server)">Reconfigure</md-button>
+                        <md-button ng-click="rebuildServer($event, server)">Rebuild</md-button>
                         <md-button ng-click="deleteServer($event, server)">Delete</md-button>
                     </md-card-actions>
                 </md-card>
@@ -42,3 +43,10 @@
         </div>
     </md-content>
 </div>
+<md-content>
+    <div flex layout-align="end end">
+        <md-button class="md-fab" ng-click="showCreateServer($event)">
+            <md-icon>add</md-icon>
+        </md-button>
+    </div>
+</md-content>
